Fix tabbar spacing on *nix

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -1557,6 +1557,13 @@ richlistitem[type~="action"][actiontype="switchtab"][selected="true"] > .ac-url-
   margin-bottom: -1px;
 }
 
+@media (-moz-unix-theme: gtk-2) {
+  #TabsToolbar[tabsontop=true] {
+    margin-bottom: -3px !important;
+  }
+}
+
+
 #TabsToolbar toolbarbutton ~ .tabbrowser-tabs {
   -moz-margin-start: 0;
 }
